--- a/style2.css
+++ b/style2.css
@@ -3,6 +3,20 @@
   --font-family: "IM Fell French Canon";
   --font-family-header: "IM Fell French Canon";
 }
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main main right'
+    'footer footer footer footer footer footer';
+  gap: 10px;
+  padding: 10px;
+  width: auto;
+}
 
 ul {
     list-style-type: none;
@@ -35,15 +49,22 @@ ul {
   body {
     background-color: #ffffcc;
     color:#006699;
+    font-family: "IM Fell French Canon";
   }
-  
+  @media only screen and (max-width: 600px) {
+    .main{
+      margin-left: 2%;
+    margin-right: 2%;
+    border: 15px #9bff99;
+   outline: 5px solid #00990f; /* Second border */
+    }
+  }
   .main {
     width: auto;
    border: 15px #99ccff;
    outline: 5px solid #006699; /* Second border */
       outline-offset: 0px;
     border-style: solid;
-    justify:center;
     padding: auto;
     margin-top: 20px;
     margin-left: 20%;
@@ -80,9 +101,10 @@ ul {
     font-style: italic;
   }
   .fa {
-    padding: 20px;
+    padding:15px;
+    gap:0px;
     font-size: 30px;
-    width: 30px;
+    width: 0px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
@@ -157,3 +179,46 @@ table {
     .illustration2{
       outline: 5px solid #006699;
     }
+
+  .item1{
+    text-align: center;
+    margin:auto;
+    
+  }
+  .item2{
+    text-align: center;
+    margin:auto;
+    
+  }
+  .item3{
+    text-align: center;
+    margin:auto;
+  }
+  .item4{
+    text-align: center;
+    margin:auto;
+  }
+  .item5{
+    text-align: center;
+    margin:auto;
+  }
+  .item6{
+    text-align: center;
+    margin:auto;
+  }
+  .itema{
+    text-align: center;
+    margin:auto;
+  }
+  .itemb{
+    text-align: center;
+    margin:auto;
+  }
+  .itemc{
+    text-align: center;
+    margin:auto;
+  }
+  .itemd{
+    text-align: center;
+    margin:auto;
+  }
